# rebar

./: Cargo.toml
.vim/: coc-settings.json
benchmarks/: engines.toml
benchmarks/definitions/curated/: 01-literal.toml  12-dictionary.toml
engines/lean/: Cargo.toml  build.rs  ffi.rs  main.rs
record/lean/: 20240303.csv
