[package]
name = "main"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
anyhow = "1.0.69"
lexopt = "0.3.0"

[dependencies.klv]
path = "../../shared/klv"
[dependencies.regexredux]
path = "../../shared/regexredux"
[dependencies.timer]
path = "../../shared/timer"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
