[package]
name = "main"
version = "0.0.1"
edition = "2021"
links = "Regex"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
anyhow = "1.0.69"
lexopt = "0.3.0"

[dependencies.klv]
path = "../../shared/klv"
[dependencies.regexredux]
path = "../../shared/regexredux"
[dependencies.timer]
path = "../../shared/timer"

[build-dependencies]
bindgen = "0.69.1"

[profile.release]
debug = true
codegen-units = 1
lto = "fat"
